vendor/feedvalidator/demo/testcases/opml/errors/unknownOutlineType.opml
<?xml version="1.0" encoding="ISO-8859-1"?>

<!--
  Description:  Unknown outline type
  Expect:       InvalidOutlineType
-->

<opml version="1.1">
	<head>
		<title>Unknown outline type</title>
		</head>
	<body>
		<outline text="Who's heard of this type?" type="oy-vey"/>
		</body>
	</opml>
